--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -27,13 +27,6 @@ WORKDIR /app
 
 # 安装系统依赖（使用代理）
 RUN apt-get update && apt-get install -y \
-    software-properties-common \
-    && add-apt-repository ppa:deadsnakes/ppa \
-    && apt-get update && apt-get install -y \
-    python3.11 \
-    python3.11-distutils \
-    python3.11-venv \
-    python3.11-dev \
     build-essential \
     libpq-dev \
     pkg-config \
@@ -42,12 +35,29 @@ RUN apt-get update && apt-get install -y \
     curl \
     wget \
     git \
-    supervisor \
     unzip \
     libaio1 \
-    && rm -rf /var/lib/apt/lists/* \
-    && ln -sf /usr/bin/python3.11 /usr/bin/python3 \
-    && ln -sf /usr/bin/python3.11 /usr/bin/python
+    supervisor \
+    && rm -rf /var/lib/apt/lists/*
+
+# 安装uv
+RUN if [ -n "$HTTP_PROXY" ]; then \
+        curl -LsSf --proxy "$HTTP_PROXY" https://astral.sh/uv/install.sh | sh; \
+    else \
+        curl -LsSf https://astral.sh/uv/install.sh | sh; \
+    fi
+ENV PATH="/root/.local/bin:$PATH"
+
+# 复制uv到系统目录
+RUN cp /root/.local/bin/uv /usr/local/bin/uv && \
+    chmod +x /usr/local/bin/uv
+
+# 使用uv安装Python 3.11
+RUN uv python install 3.11
+
+# 创建虚拟环境，使用系统Python
+RUN uv venv /app/.venv --python python3.11
+ENV PATH="/app/.venv/bin:$PATH"
 
 # 安装Oracle Instant Client
 ENV ORACLE_CLIENT_VERSION=21.18.0.0.0
@@ -72,25 +82,6 @@ RUN mkdir -p $ORACLE_HOME && \
 ENV LD_LIBRARY_PATH=$ORACLE_HOME:$LD_LIBRARY_PATH
 ENV PATH=$ORACLE_HOME:$PATH
 
-# 安装uv（在root用户下安装）
-RUN if [ -n "$HTTP_PROXY" ]; then \
-        curl -LsSf --proxy "$HTTP_PROXY" https://astral.sh/uv/install.sh | sh; \
-    else \
-        curl -LsSf https://astral.sh/uv/install.sh | sh; \
-    fi
-ENV PATH="/root/.local/bin:$PATH"
-
-# 复制uv到系统目录
-RUN cp /root/.local/bin/uv /usr/local/bin/uv && \
-    chmod +x /usr/local/bin/uv
-
-# 创建虚拟环境
-RUN uv venv /app/.venv
-ENV PATH="/app/.venv/bin:$PATH"
-
-# 配置uv代理（如果设置了代理）
-# uv使用环境变量进行代理配置，不需要config命令
-
 # 复制项目配置文件
 COPY pyproject.toml uv.lock /app/
 
@@ -101,7 +92,9 @@ COPY README.md /app/
 RUN uv sync --frozen --no-dev
 
 # 验证虚拟环境创建
-RUN ls -la /app/.venv/bin/python && /app/.venv/bin/python --version
+RUN /app/.venv/bin/python --version
+
+# supervisor已通过apt安装，无需额外安装
 
 # 复制应用代码
 COPY . /app/
@@ -186,19 +179,7 @@ stderr_logfile=/app/userdata/logs/whalefall_error.log
 stderr_logfile_maxbytes=50MB
 stderr_logfile_backups=10
 
-[program:whalefall-scheduler]
-command=/app/.venv/bin/python -c "from app.scheduler import start_scheduler; start_scheduler()"
-directory=/app
-user=root
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/app/userdata/logs/scheduler.log
-stdout_logfile_maxbytes=50MB
-stdout_logfile_backups=10
-stderr_logfile=/app/userdata/logs/scheduler_error.log
-stderr_logfile_maxbytes=50MB
-stderr_logfile_backups=10
+# 调度器已集成在Flask应用中，不需要单独启动
 EOF
 
 # 暴露端口
@@ -211,23 +192,14 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
 # 开发环境阶段
 FROM base as development
 
-# 重新设置代理环境变量（继承自base阶段）
-ENV HTTP_PROXY=${HTTP_PROXY}
-ENV HTTPS_PROXY=${HTTPS_PROXY}
-ENV NO_PROXY=${NO_PROXY}
-ENV http_proxy=${HTTP_PROXY}
-ENV https_proxy=${HTTPS_PROXY}
-ENV no_proxy=${NO_PROXY}
-
-# 安装开发依赖
+# 安装开发依赖（简化，避免网络问题）
 RUN apt-get update && apt-get install -y \
     vim \
-    htop \
     curl \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* || true
 
-# 开发环境启动命令
-CMD ["python", "app.py"]
+# 开发环境启动命令 - 使用Supervisor管理
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
 
 # 生产环境阶段
 FROM base as production
