--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -112,24 +112,24 @@ services:
     restart: unless-stopped
     environment:
       - FLASK_APP=app.py
-      - FLASK_ENV=production
-      - FLASK_DEBUG=0
-      - FLASK_HOST=0.0.0.0
-      - FLASK_PORT=5001
-      - DATABASE_URL=${DATABASE_URL}
+      - FLASK_ENV=${FLASK_ENV:-production}
+      - FLASK_DEBUG=${FLASK_DEBUG:-0}
+      - FLASK_HOST=${FLASK_HOST:-0.0.0.0}
+      - FLASK_PORT=${FLASK_PORT:-5001}
+      - DATABASE_URL=${DATABASE_URL_PROD}
       - CACHE_TYPE=${CACHE_TYPE}
       - CACHE_REDIS_URL=${CACHE_REDIS_URL}
       - SECRET_KEY=${SECRET_KEY}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
-      - BCRYPT_LOG_ROUNDS=${BCRYPT_LOG_ROUNDS:-12}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-      - APP_NAME=${APP_NAME:-鲸落}
-      - APP_VERSION=${APP_VERSION:-1.0.0}
-      - PERMANENT_SESSION_LIFETIME=${PERMANENT_SESSION_LIFETIME:-3600}
+      - BCRYPT_LOG_ROUNDS=${BCRYPT_LOG_ROUNDS}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - APP_NAME=${APP_NAME}
+      - APP_VERSION=${APP_VERSION}
+      - PERMANENT_SESSION_LIFETIME=${PERMANENT_SESSION_LIFETIME}
       # 运行时代理配置
-      - HTTP_PROXY=${HTTP_PROXY:-}
-      - HTTPS_PROXY=${HTTPS_PROXY:-}
-      - NO_PROXY=${NO_PROXY:-localhost,127.0.0.1,::1}
+      - HTTP_PROXY=${HTTP_PROXY}
+      - HTTPS_PROXY=${HTTPS_PROXY}
+      - NO_PROXY=${NO_PROXY}
     env_file:
       - .env
     volumes:
