refactor: 移除Flask应用持久化存储
- 移除docker-compose中的whalefall_app_data卷配置
- 移除Flask容器的持久化卷挂载
- 使用容器内临时存储，简化部署
- 保留数据库和Redis的持久化存储
- 更新Dockerfile注释说明

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -76,7 +76,7 @@ RUN /app/.venv/bin/python --version
 # 复制应用代码
 COPY . /app/
 
-# 创建必要的目录
+# 创建必要的目录（临时存储）
 RUN mkdir -p /app/userdata/logs /app/userdata/exports /app/userdata/backups /app/userdata/uploads
 
 # 创建supervisor配置目录
