--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,15 +1,11 @@
 # 本地开发环境配置（macOS，无代理）
-# 包含：PostgreSQL、Redis、Nginx、Flask应用
+# 包含：PostgreSQL、Redis、Flask应用（内置Nginx）
 # 使用命名卷进行数据持久化
 
 volumes:
   whalefall_postgres_data:
     driver: local
   whalefall_redis_data:
-    driver: local
-  whalefall_nginx_logs:
-    driver: local
-  whalefall_nginx_ssl:
     driver: local
   # whalefall_app_data:  # 移除Flask应用持久化卷
   #   driver: local
@@ -73,32 +69,7 @@ services:
           memory: 256M
           cpus: '0.25'
 
-  # Nginx反向代理
-  nginx:
-    image: nginx:alpine
-    container_name: whalefall_nginx_dev
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - whalefall_nginx_logs:/var/log/nginx
-      - whalefall_nginx_ssl:/etc/nginx/ssl
-    networks:
-      - whalefall_dev_network
-    # 基础环境中不依赖whalefall服务
-    # depends_on:
-    #   - whalefall
-    deploy:
-      resources:
-        limits:
-          memory: 256M
-          cpus: '0.5'
-        reservations:
-          memory: 128M
-          cpus: '0.25'
-
-  # Flask应用（开发环境）
+  # Flask应用（开发环境，内置Nginx）
   whalefall:
     build:
       context: .
@@ -132,7 +103,7 @@ services:
     #   - ./migrations:/app/migrations:ro
     #   - ./sql:/app/sql:ro
     ports:
-      - "5001:5001"
+      - "80:80"
     networks:
       - whalefall_dev_network
     depends_on:
@@ -141,7 +112,7 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
       timeout: 10s
       retries: 3
