--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,15 +1,11 @@
-# 服务器正式环境配置（x86，有代理）
-# 包含：PostgreSQL、Redis、Nginx、Flask应用
+# 生产环境配置（支持代理）
+# 包含：PostgreSQL、Redis、Flask应用（内置Nginx）
 # 使用命名卷进行数据持久化
 
 volumes:
   whalefall_postgres_data:
     driver: local
   whalefall_redis_data:
-    driver: local
-  whalefall_nginx_logs:
-    driver: local
-  whalefall_nginx_ssl:
     driver: local
   # whalefall_app_data:  # 移除Flask应用持久化卷
   #   driver: local
@@ -73,40 +69,17 @@ services:
           memory: 512M
           cpus: '0.5'
 
-  # Nginx反向代理
-  nginx:
-    image: nginx:alpine
-    container_name: whalefall_nginx_prod
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - whalefall_nginx_logs:/var/log/nginx
-      - whalefall_nginx_ssl:/etc/nginx/ssl
-    networks:
-      - whalefall_prod_network
-    # depends_on: whalefall  # 注释掉，因为whalefall在profiles中
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '1.0'
-        reservations:
-          memory: 256M
-          cpus: '0.5'
-
-  # Flask应用（生产环境）
+  # Flask应用（生产环境，内置Nginx）
   whalefall:
     build:
       context: .
       dockerfile: Dockerfile.prod
       target: production
       args:
-        HTTP_PROXY: ${HTTP_PROXY:-}
-        HTTPS_PROXY: ${HTTPS_PROXY:-}
-        NO_PROXY: ${NO_PROXY:-localhost,127.0.0.1,::1}
         BUILDKIT_INLINE_CACHE: 1
+        HTTP_PROXY: ${HTTP_PROXY}
+        HTTPS_PROXY: ${HTTPS_PROXY}
+        NO_PROXY: ${NO_PROXY}
     image: whalefall:prod
     container_name: whalefall_app_prod
     restart: unless-stopped
@@ -126,15 +99,15 @@ services:
       - APP_NAME=${APP_NAME}
       - APP_VERSION=${APP_VERSION}
       - PERMANENT_SESSION_LIFETIME=${PERMANENT_SESSION_LIFETIME}
-      # 运行时代理配置
-      - HTTP_PROXY=${HTTP_PROXY}
-      - HTTPS_PROXY=${HTTPS_PROXY}
-      - NO_PROXY=${NO_PROXY}
-    env_file:
-      - .env
     # 移除持久化卷，使用容器内临时存储
     # volumes:
     #   - whalefall_app_data:/app/userdata
+    #   - ./app:/app/app:ro
+    #   - ./migrations:/app/migrations:ro
+    #   - ./sql:/app/sql:ro
+    ports:
+      - "80:80"
+      - "443:443"
     networks:
       - whalefall_prod_network
     depends_on:
@@ -143,7 +116,7 @@ services:
       redis:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
       timeout: 10s
       retries: 3
