--- a/nginx/conf.d/whalefall-prod.conf
+++ b/nginx/conf.d/whalefall-prod.conf
@@ -1,82 +1,51 @@
-# 鲸落生产环境 Nginx 配置
-# 支持HTTP和HTTPS，HTTP重定向到HTTPS
+user www-data;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 
-upstream whalefall_backend {
-    server whalefall_app_prod:5001;
+events {
+    worker_connections 1024;
+    use epoll;
+    multi_accept on;
 }
 
-# HTTP 重定向到 HTTPS
-server {
-    listen 80;
-    server_name localhost;
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
     
-    # 重定向所有 HTTP 请求到 HTTPS
-    return 301 https://$server_name$request_uri;
-}
-
-# HTTPS 配置
-server {
-    listen 443 ssl http2;
-    server_name localhost;
+    # 日志格式
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
     
-    # SSL证书配置
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    access_log /var/log/nginx/access.log main;
     
-    # SSL配置
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
+    # 基本设置
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 20M;
     
-    # 客户端最大请求体大小
-    client_max_body_size 16M;
+    # Gzip压缩
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml;
     
-    # 日志配置
-    access_log /var/log/nginx/ssl_access.log;
-    error_log /var/log/nginx/ssl_error.log;
-    
-    # 主应用代理
-    location / {
-        proxy_pass http://whalefall_backend;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # 超时配置
-        proxy_connect_timeout 5s;
-        proxy_send_timeout 5s;
-        proxy_read_timeout 5s;
-        
-        # 缓冲配置
-        proxy_buffering on;
-        proxy_buffer_size 4k;
-        proxy_buffers 8 4k;
-        
-        # 当后端不可用时，返回503状态
-        proxy_intercept_errors on;
-        error_page 502 503 504 = @fallback;
-    }
-    
-    # 静态文件缓存
-    location /static/ {
-        proxy_pass http://whalefall_backend;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        proxy_intercept_errors on;
-        error_page 502 503 504 = @fallback;
-    }
-    
-    # 健康检查
-    location /health {
-        access_log off;
-        return 200 "Nginx is running (Prod HTTPS)\n";
-        add_header Content-Type text/plain;
-    }
-    
-    # 回退页面（当Flask应用不可用时）
-    location @fallback {
-        return 503 "Service temporarily unavailable. Please wait for Flask application to start.\n";
-        add_header Content-Type text/plain;
-    }
+    # 包含站点配置
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
