fix: 修复Dockerfile.dev多阶段构建问题
- 添加base阶段作为基础镜像
- 添加development阶段作为开发环境目标
- 解决docker-compose.dev.yml中target: development找不到的问题
- 确保Docker构建能够正常完成

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,5 @@
 # 使用Ubuntu 22.04作为基础镜像
-FROM ubuntu:22.04
+FROM ubuntu:22.04 as base
 
 # 设置环境变量
 ENV DEBIAN_FRONTEND=noninteractive
@@ -119,6 +119,9 @@ EXPOSE 80
 # 健康检查
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost/health || exit 1
+
+# 开发环境阶段
+FROM base as development
 
 # 开发环境启动命令
 CMD ["/usr/local/bin/start-dev-services.sh"]
