--- a/nginx/supervisor/whalefall-dev.conf
+++ b/nginx/supervisor/whalefall-dev.conf
@@ -5,6 +5,17 @@ logfile=/var/log/supervisord.log
 pidfile=/var/run/supervisord.pid
 childlogdir=/var/log/
 
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+directory=/etc/nginx
+user=root
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/log/nginx/nginx.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+
 [program:whalefall]
 command=/app/.venv/bin/gunicorn --config /app/gunicorn.conf.py app:app
 directory=/app
@@ -19,4 +30,4 @@ stderr_logfile=/app/userdata/logs/whalefall_error.log
 stderr_logfile_maxbytes=50MB
 stderr_logfile_backups=10
 
-# 开发环境不需要supervisor管理Nginx，使用系统服务
+# 开发环境使用Supervisor管理Nginx和Flask应用
