fix: 修复生产环境DATABASE_URL环境变量引用问题
- 将docker-compose.prod.yml中的DATABASE_URL_PROD改为DATABASE_URL
- 解决生产环境数据库连接问题
- 确保环境变量与.env文件中的配置一致

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -89,7 +89,7 @@ services:
       - FLASK_DEBUG=${FLASK_DEBUG:-0}
       - FLASK_HOST=${FLASK_HOST:-0.0.0.0}
       - FLASK_PORT=${FLASK_PORT:-5001}
-      - DATABASE_URL=${DATABASE_URL_PROD}
+      - DATABASE_URL=${DATABASE_URL}
       - CACHE_TYPE=${CACHE_TYPE}
       - CACHE_REDIS_URL=${CACHE_REDIS_URL}
       - SECRET_KEY=${SECRET_KEY}
