--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -83,6 +83,8 @@ services:
     image: whalefall:prod
     container_name: whalefall_app_prod
     restart: unless-stopped
+    env_file:
+      - .env
     environment:
       - FLASK_APP=app.py
       - FLASK_ENV=${FLASK_ENV:-production}
