--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -86,7 +86,7 @@ services:
       - FLASK_DEBUG=${FLASK_DEBUG:-1}
       - FLASK_HOST=${FLASK_HOST:-0.0.0.0}
       - FLASK_PORT=${FLASK_PORT:-5001}
-      - DATABASE_URL=${DATABASE_URL_DOCKER}
+      - DATABASE_URL=${DATABASE_URL}
       - CACHE_TYPE=${CACHE_TYPE}
       - CACHE_REDIS_URL=${CACHE_REDIS_URL}
       - SECRET_KEY=${SECRET_KEY}
