fix: 安全优化和代码清理
- 将所有硬编码密码替换为占位符，提升安全性
- 删除所有测试文件，简化项目结构
- 恢复被误删的连接测试服务
- 清理JavaScript调试信息，将alert改为console.error
- 更新文档链接和版本信息

主要变更:
- 修复README.md、env.development、env.production中的硬编码密码
- 删除整个tests/目录及相关测试文件
- 恢复app/services/connection_test_service.py
- 清理模板文件中的调试代码
- 更新文档中的错误链接和过时信息

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,7 +7,7 @@ ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV FLASK_APP=app.py
 ENV FLASK_ENV=development
-ENV DATABASE_URL=postgresql://whalefall_user:xAfbY3VRSlPmHY8ell3iUYmXZqcCt9iz@postgres:5432/whalefall_dev
+ENV DATABASE_URL=postgresql://whalefall_user:your_secure_password@postgres:5432/whalefall_dev
 
 # 设置工作目录
 WORKDIR /app
