--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "structlog>=25.4.0",
     "requests>=2.32.5",
     "pyyaml>=6.0.2",
+    "tzdata>=2025.2",
 ]
 
 [project.optional-dependencies]
