--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -91,7 +91,7 @@ services:
       - FLASK_DEBUG=${FLASK_DEBUG:-0}
       - FLASK_HOST=${FLASK_HOST:-0.0.0.0}
       - FLASK_PORT=${FLASK_PORT:-5001}
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+      - DATABASE_URL=postgresql+psycopg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       - CACHE_TYPE=${CACHE_TYPE}
       - CACHE_REDIS_URL=${CACHE_REDIS_URL}
       - SECRET_KEY=${SECRET_KEY}
